# mandelbrot-cpp

./: CMakeLists.txt  README.md  julia.frag  mandelbrot.frag  run.sh
MandelbrotExplorer/: Mandelbrot
include/: Frame.hpp
source/: Frame.cpp  main.cpp
